--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viewmodel-react-explorer",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Debuggin tool for viewmodel-react",
   "repository": {
     "type": "git",
@@ -27,11 +27,12 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "viewmodel-react-plugin": "^0.7.9"
+    "viewmodel-react-plugin": "^0.8.4"
   },
   "peerDependencies": {
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "viewmodel-react": "^0.8.1"
-  }
+  },
+  "dependencies": {}
 }
